config-root/namespaces/jx-staging/sta/sta-sta-deploy.yaml
# Source: sta/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sta-sta
  labels:
    draft: draft-app
    chart: "sta-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: sta-sta
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: sta-sta
    spec:
      serviceAccountName: sta-sta
      containers:
        - name: sta
          image: "ghcr.io/goku-bot-user/sta:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
