config-root/namespaces/jx-staging/sta/sta-svc.yaml
# Source: sta/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sta
  labels:
    chart: "sta-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sta-sta
