config-root/namespaces/jx-staging/sta/sta-ingress.yaml
# Source: sta/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sta
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: sta
              servicePort: 80
      host: sta-jx-staging.build.regentmarkets.com
